TH-239 - Fixed the button and added a z-index as well added a padding

--- a/teamhuddle-api/app/assets/stylesheets/application.css.scss
+++ b/teamhuddle-api/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@
   padding-bottom: 10px !important;
   border: none;
   margin: 0;
+  z-index: 999;
 
 }
 
@@ -718,6 +719,7 @@ li {
   }
 
   .right-wrapper {
+    z-index: 0;
     margin-top: 20px;
     margin-bottom: 35px;
     h1{
@@ -730,10 +732,11 @@ li {
       font-size: 18px;
     }
     #dropin-view-btn{
-      z-index: 9999;
+      z-index: 100;
       margin: 0;
       margin-bottom: 25px;
       padding: 0;
+      font-size: 20px;
     }
     #show-on-map{
       width: 115px;
@@ -853,6 +856,7 @@ li {
   }
 
   .right-wrapper {
+    z-index: 0;
     margin-top: 30px;
     margin-bottom: 35px;
     #dropin-view-btn{
@@ -943,6 +947,7 @@ li {
     top: 50px !important;
     padding-left: 0px;
     padding-right: 15px;
+    z-index: 0;
   }
 
  #sticky-toolbox {
